tests/baselines/reference/indexSignatureTypeCheck.errors.txt
tests/cases/compiler/indexSignatureTypeCheck.ts(34,1): error TS2342: An index expression argument must be of type 'string', 'number', 'symbol, or 'any'.
tests/cases/compiler/indexSignatureTypeCheck.ts(37,8): error TS1019: An index signature parameter cannot have a question mark.
tests/cases/compiler/indexSignatureTypeCheck.ts(38,6): error TS1017: An index signature cannot have a rest parameter.
tests/cases/compiler/indexSignatureTypeCheck.ts(39,6): error TS1096: An index signature must have exactly one parameter.
tests/cases/compiler/indexSignatureTypeCheck.ts(40,6): error TS1096: An index signature must have exactly one parameter.
tests/cases/compiler/indexSignatureTypeCheck.ts(50,5): error TS2375: Duplicate number index signature.
tests/cases/compiler/indexSignatureTypeCheck.ts(55,5): error TS2375: Duplicate number index signature.
tests/cases/compiler/indexSignatureTypeCheck.ts(65,1): error TS2322: Type '{ [x: number]: string; }' is not assignable to type '{ [x: string]: string; }'.
  Index signature is missing in type '{ [x: number]: string; }'.
tests/cases/compiler/indexSignatureTypeCheck.ts(66,1): error TS2322: Type '{ [x: E<number>]: number; }' is not assignable to type '{ [x: string]: string; }'.
  Index signature is missing in type '{ [x: E<number>]: number; }'.
tests/cases/compiler/indexSignatureTypeCheck.ts(70,1): error TS2322: Type '{ [x: E<number>]: number; }' is not assignable to type '{ [x: number]: string; }'.
  Index signatures are incompatible.
    Type 'number' is not assignable to type 'string'.
tests/cases/compiler/indexSignatureTypeCheck.ts(72,1): error TS2322: Type '{ [x: string]: string; }' is not assignable to type '{ [x: E<number>]: number; }'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'number'.
tests/cases/compiler/indexSignatureTypeCheck.ts(73,1): error TS2322: Type '{ [x: number]: string; }' is not assignable to type '{ [x: E<number>]: number; }'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/indexSignatureTypeCheck.ts (12 errors) ====
    interface IPropertySet {
        [index: string]: any;
    }
    
    var ps: IPropertySet = null;
    var index: any = "hello";
    ps[index] = 12;
    
    enum Values {
        a = 1,
        b = 2
    }
    
    type Values2 = Values;
    type Values3 = number;
     
    interface EnumMap {
        [index: Values]: Values;
    }
    
    interface EnumMap2 {
        [index: Values2]: Values2;
    }
    interface NumberMap {
        [index: Values3]: Values3;
    }
    
    var pe: Values = null;
    
    pe[1] = null
    pe[3] = null
    pe[Values.b] = 5
    
    pe[true] = null
    ~~~~~~~~
!!! error TS2342: An index expression argument must be of type 'string', 'number', 'symbol, or 'any'.
    
    interface indexErrors {
        [p2?: string];
           ~
!!! error TS1019: An index signature parameter cannot have a question mark.
        [...p3: any[]];
         ~~~
!!! error TS1017: An index signature cannot have a rest parameter.
        [p4: string, p5?: string];
         ~~
!!! error TS1096: An index signature must have exactly one parameter.
        [p6: string, ...p7: any[]];
         ~~
!!! error TS1096: An index signature must have exactly one parameter.
    }
    
    enum E {
        A, B, C
    }
    
    
    interface DuplicateAccess {
        [index: Values]: Values;
        [index: Values2]: Values2;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    interface DuplicateAccess2 {
        [index: number]: Values;
        [index: Values3]: Values3;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    var x: { [x: string]: string }
    var xn: {[x: string]: number }
    var y: { [x: number]: string }
    var yn: { [x: number]: number }
    var z: { [x: E]: number }
    
    x = x;
    x = y;
    ~
!!! error TS2322: Type '{ [x: number]: string; }' is not assignable to type '{ [x: string]: string; }'.
!!! error TS2322:   Index signature is missing in type '{ [x: number]: string; }'.
    x = z;
    ~
!!! error TS2322: Type '{ [x: E<number>]: number; }' is not assignable to type '{ [x: string]: string; }'.
!!! error TS2322:   Index signature is missing in type '{ [x: E<number>]: number; }'.
    
    y = x;
    y = y;
    y = z;
    ~
!!! error TS2322: Type '{ [x: E<number>]: number; }' is not assignable to type '{ [x: number]: string; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
    
    z = x;
    ~
!!! error TS2322: Type '{ [x: string]: string; }' is not assignable to type '{ [x: E<number>]: number; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    z = y;
    ~
!!! error TS2322: Type '{ [x: number]: string; }' is not assignable to type '{ [x: E<number>]: number; }'.
!!! error TS2322:   Index signatures are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    z = z;
    z = yn;
    z = xn;
    
    // TODO: Should fail
    yn = z;
    
    type foo = string
    var s: { [x: foo]: string }
    x = s
    s = x
    